UX: Resize popup on mobile to avoid overflow.

--- a/assets/stylesheets/mobile/feature-voting.scss
+++ b/assets/stylesheets/mobile/feature-voting.scss
@@ -24,6 +24,11 @@
   white-space: nowrap;
 }
 
+.voting-popup-menu {
+  width: calc(100vw - 100px);
+  // 80px left positioning + 20px .wrap padding
+}
+
 // TEMP: RTL overrides
 .title-voting {
   .rtl & {
